# socialhome

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.gfs  Dockerfile.sh  README.md  pyproject.toml  socialhome.toml.example
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
client/: index.html  package.json  vite.config.ts  weblate.yml
client/src/: App.tsx  main.tsx  router.test.ts  router.ts  types.ts  ws.ts
docs/: README.md  api.md  crypto.md  database.md  testing.md
docs/protocol/: README.md  calendar.md  calls.md  discovery.md  dm.md  feeds.md  invites.md  pages.md  pairing.md  presence.md  push-relay.md  spaces.md  sync.md  tasks.md
social_home/: app.py  app_keys.py  auth.py  config.py  crypto.py  hardening.py  identity_bootstrap.py  rate_limiter.py  security.py
social_home/db/: migrations.py
social_home/domain/: calendar.py  call.py  conversation.py  household_features.py  mention.py  post.py  shopping.py  space.py  sticky.py  theme.py  user.py
social_home/federation/: auto_pair_coordinator.py  crypto_suite.py  encoder.py  federation_service.py  pairing_coordinator.py  sdp_signing.py  sealed_sender.py  strategies.py  sync_manager.py  sync_rtc.py  transport.py
social_home/global_server/: admin.py  config.py  federation.py  public.py  repositories.py  rtc_transport.py  server.py
social_home/i18n/: __init__.py
social_home/infrastructure/: event_bus.py  idempotency.py  key_manager.py  outbox_processor.py  page_lock_scheduler.py  post_draft_scheduler.py  reconnect_queue.py  replay_cache_scheduler.py  space_retention_scheduler.py  ws_manager.py
social_home/media/: image_processor.py  video_processor.py
social_home/platform/: __init__.py  adapter.py
social_home/repositories/: _spec.py  bazaar_repo.py  calendar_repo.py  call_repo.py  conversation_repo.py  dm_contact_repo.py  gallery_repo.py  gfs_connection_repo.py  household_features_repo.py  notification_repo.py  outbox_repo.py  page_repo.py  peer_space_directory_repo.py  poll_repo.py  post_repo.py  public_space_repo.py  push_subscription_repo.py  report_repo.py  search_repo.py  shopping_repo.py  space_cover_repo.py  space_post_repo.py  space_repo.py  sticky_repo.py  theme_repo.py  user_repo.py
social_home/routes/: __init__.py  backup.py  base.py  bazaar.py  calendar_export.py  calls.py  health.py  notifications.py  pairing.py  peer_spaces.py  public_spaces.py  spaces.py  storage.py  tasks.py  users.py  ws.py
social_home/services/: bazaar_service.py  calendar_import_service.py  calendar_service.py  call_service.py  child_protection_service.py  comment_federation_outbound.py  data_export_service.py  federation_inbound_service.py  ha_bridge_service.py  household_features_service.py  notification_service.py  poll_federation_outbound.py  poll_service.py  presence_service.py  push_service.py  realtime_service.py  report_service.py  schedule_federation_outbound.py  search_service.py  space_crypto_service.py  space_service.py  task_federation_outbound.py  task_service.py  theme_service.py  typing_service.py  user_service.py
socialhome/: __init__.py  __main__.py  access_log.py  app.py  app_keys.py  auth.py  config.py  hardening.py  identity_bootstrap.py  media_signer.py  security.py
socialhome/db/: __init__.py  database.py  migrations.py  unit_of_work.py
socialhome/domain/: __init__.py  calendar.py  call.py  conversation.py  events.py  federation.py  gallery.py  household_features.py  media_constraints.py  media_validator.py  notification.py  outbox.py  page.py  post.py  presence.py  public_space.py  push_subscription.py  report.py  space.py  space_bot.py  space_key.py  task.py  user.py
socialhome/federation/: __init__.py  auto_pair_coordinator.py  crypto_suite.py  encoder.py  event_dispatch_registry.py  federation_service.py  inbound_validator.py  pairing_coordinator.py  peer_directory_handler.py  peer_pairing_client.py  pq_signer.py  private_invite_handler.py  strategies.py  sync_rtc.py  transport.py
socialhome/global_server/: __init__.py  admin.py  admin_service.py  app_keys.py  cluster.py  config.py  domain.py  federation.py  public.py  repositories.py  rtc_transport.py  server.py
socialhome/i18n/: __init__.py
socialhome/infrastructure/: __init__.py  calendar_reminder_scheduler.py  dm_gc_scheduler.py  event_bus.py  idempotency.py  key_manager.py  outbox_processor.py  page_lock_scheduler.py  pairing_relay_scheduler.py  replay_cache_scheduler.py  task_deadline_scheduler.py  task_recurrence_scheduler.py  ws_manager.py
socialhome/media/: __init__.py  image_processor.py  serve.py  video_processor.py
socialhome/migrations/: 0001_initial.sql
socialhome/platform/: __init__.py  adapter.py  local_credentials.py
socialhome/repositories/: __init__.py  alias_repo.py  base.py  bazaar_repo.py  calendar_repo.py  call_repo.py  conversation_repo.py  cp_repo.py  dm_routing_repo.py  federation_repo.py  gallery_repo.py  gfs_connection_repo.py  household_features_repo.py  notification_repo.py  outbox_repo.py  page_repo.py  pairing_relay_repo.py  post_repo.py  presence_repo.py  profile_picture_repo.py  public_space_repo.py  push_subscription_repo.py  shopping_repo.py  space_bot_repo.py  space_key_repo.py  space_poll_repo.py  space_post_repo.py  space_remote_member_repo.py  space_repo.py  space_zone_repo.py  sticky_repo.py  storage_stats_repo.py  task_repo.py  theme_repo.py  user_repo.py
socialhome/routes/: __init__.py  aliases.py  backup.py  base.py  bazaar.py  bot_bridge.py  calendar.py  calendar_export.py  calendar_ics.py  child_protection.py  conversations.py  corner.py  federation.py  feed.py  gallery.py  gfs.py  ha_integration.py  ha_users.py  household.py  media.py  pages.py  pairing.py  pairing_peer.py  polls.py  presence.py  push.py  reports.py  search.py  (+12 more)
tests/: conftest.py  test___main__.py  test_access_log.py  test_app.py  test_app_keys.py  test_auth.py  test_config.py  test_crypto.py  test_hardening.py  test_media_signer.py  test_rate_limiter.py  test_redeliver_envelope.py  test_security.py
(+648 files in other folders)
